--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "Onejiall",
-  "description": "A Vue.js project",
+  "description": "one ji all, all ji one.",
   "version": "1.0.0",
   "author": "penggenyong<conpgy@gmail.com>",
   "private": true,
@@ -9,7 +9,9 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "vue": "^2.1.0"
+    "video.js": "^5.14.1",
+    "vue": "^2.1.0",
+    "vue-router": "^2.1.1"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
