--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "video.js": "^5.14.1",
     "vue": "^2.1.0",
-    "vue-router": "^2.1.1"
+    "vue-router": "^2.1.1",
+    "socket.io": "^1.4.8"
   },
   "devDependencies": {
     "babel-core": "^6.0.0",
