--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
-    "video.js": "^5.14.1",
     "vue": "^2.1.0",
+    "vuex": "^2.1.1",
     "vue-router": "^2.1.1",
     "socket.io": "^1.4.8"
   },
@@ -24,6 +24,7 @@
     "vue-loader": "^10.0.0",
     "vue-template-compiler": "^2.1.0",
     "webpack": "^2.1.0-beta.25",
-    "webpack-dev-server": "^2.1.0-beta.9"
+    "webpack-dev-server": "^2.1.0-beta.9",
+    "babel-plugin-transform-object-rest-spread": "^6.20.1"
   }
 }
